@@ -2,8 +2,10 @@ export(ate)
 export(makeLinks)
 export(makeWeights)
 export(pctn)
+export(tef)
 export(timelag)
 importFrom(vegan,eigenvals)
+importFrom(vegan,rda)
 importFrom(vegan,scores)
 importFrom(vegan,spantree)
 S3method(ate,default)
@@ -17,4 +19,5 @@ S3method(print,ate)
 S3method(print,pctn)
 S3method(scores,ate)
 S3method(scores,pctn)
+S3method(tef,default)
 S3method(timelag,dist)
